--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,64 @@
-html,
-body {
+/* [global] */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* navbar */
+.navbar {
+  background-color: #fff !important;
+}
+
+.navbar a {
+  font-size: 1.3rem;
+  text-transform: capitalize;
+}
+
+.menu_active {
+  font-weight: bold;
+  border-bottom: 1px solid #565387;
+}
+
+.navbar a:hover {
+  color: #3498db !important;
+}
+
+@media (max-width: 991px) {
+  .menu_active {
+    font-weight: bold;
+    border-bottom: none;
+  }
+}
+
+/* header */
+#header {
+  width: 100%;
+  margin-top: 40px;
+}
+
+#header h1 {
+  font-size: 27px;
+}
+
+@media (max-width: 991px) {
+  #header {
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  #header h1 {
+    font-size: 25px;
+  }
+}
+
+/* footer */
+footer p {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
+footer a {
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
