--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,23 +34,13 @@
 /* header */
 #header {
   width: 100%;
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 #header h1 {
+  margin: 0 0 10px 0;
   font-size: 27px;
-}
-
-@media (max-width: 991px) {
-  #header {
-    text-align: center;
-  }
-}
-
-@media (max-width: 768px) {
-  #header h1 {
-    font-size: 25px;
-  }
+  font-weight: 700;
 }
 
 /* footer */
